block-scheduled-tasks/api-gateway/ocp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-svc
  labels:
    app: api-gateway
spec:
  selector:
    app: api-gateway
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  type: ClusterIP
