block-scheduled-tasks/api-gateway/ocp/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: api-gateway-route
  labels:
    app: api-gateway
spec:
  to:
    kind: Service
    name: api-gateway-svc
  port:
    targetPort: 8000
